<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_serch_root"
    android:layout_width="484dp"
    android:layout_height="374dp"
	android:layout_alignParentTop="true"
	android:paddingLeft="1dp"
	android:background="@drawable/bkg_search"
    android:orientation="vertical">

    <LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
	    android:gravity="left"
	    android:layout_marginTop="70dp"
	    android:layout_marginLeft="50dp"
        android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lab_type"/>
		<CheckBox 
			android:id="@+id/chk_minion"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_minion"/>
		<CheckBox 
			android:id="@+id/chk_spell"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_spell"/>
		<CheckBox 
			android:id="@+id/chk_weapon"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_weapon"/>
				
    </LinearLayout>

    <LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
	    android:gravity="left"
	    android:layout_marginTop="0dp"
	    android:layout_marginLeft="50dp"
        android:orientation="horizontal">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lab_race"/>
		<CheckBox 
			android:id="@+id/chk_murloc"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_murloc"/>
		<CheckBox 
			android:id="@+id/chk_demon"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_demon"/>
		<CheckBox
			android:id="@+id/chk_beast"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_beast"/>
		<CheckBox
			android:id="@+id/chk_dragon"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_dragon"/>
		<CheckBox
			android:id="@+id/chk_pirate"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_pirate"/>						
    </LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
	    android:gravity="left"
	    android:layout_marginTop="0dp"
	    android:layout_marginLeft="50dp"
        android:orientation="horizontal">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lab_ability"/>
		<CheckBox
			android:id="@+id/chk_battlecry"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_battlecry"/>
		<CheckBox
			android:id="@+id/chk_charge"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_charge"/>
		<CheckBox
			android:id="@+id/chk_combo"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_combo"/>
		<CheckBox
			android:id="@+id/chk_deathRattle"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_deathRattle"/>
		<CheckBox
			android:id="@+id/chk_divineShield"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_divineShield"/>
	</LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
	    android:gravity="left"
	    android:layout_marginTop="0dp"
	    android:layout_marginLeft="93dp"
        android:orientation="horizontal">
		<CheckBox
			android:id="@+id/chk_overload"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_overload"/>
		<CheckBox
			android:id="@+id/chk_secret"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_secret"/>
		<CheckBox
			android:id="@+id/chk_silence"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_silence"/>
		<CheckBox
			android:id="@+id/chk_stealth"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_stealth"/>
		<CheckBox
			android:id="@+id/chk_taunt"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_taunt"/>
	</LinearLayout>
	
    <LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
	    android:gravity="left"
	    android:layout_marginTop="0dp"
	    android:layout_marginLeft="93dp"
        android:orientation="horizontal">
		<CheckBox
			android:id="@+id/chk_windfury"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_windfury"/>
		<CheckBox
			android:id="@+id/chk_choice"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_choice"/>
		<CheckBox
			android:id="@+id/chk_enrage"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_enrage"/>
		<CheckBox
			android:id="@+id/chk_spellDamage"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/chk_spellDamage"/>
	</LinearLayout>
    
    <LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
	    android:gravity="center"
	    android:layout_marginTop="10dp"
        android:orientation="horizontal">

		<Button
	        android:id="@+id/btn_search_sub"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
	        android:background="@drawable/bkg_button_dark"
	        android:text="@string/btn_search_sub"
	        android:textColor="@drawable/colorswitch_white"
	        android:textSize="20sp"
	        />
		
		<Button
	        android:id="@+id/btn_clear"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
	        android:background="@drawable/bkg_button_dark"
	        android:text="@string/btn_clear"
	        android:textColor="@drawable/colorswitch_white"
	        android:textSize="20sp"
	        />
    </LinearLayout>
    
</LinearLayout>
